--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,7 @@ layout: default
   </div>
 
   <div class="date">
-    {{ page.date | date: "%Y-%m-%d %H:%M" }}
+    {{ page.date | date: "%Y-%m-%d" }}
   </div>
 
   {% include disqus.html %}
