--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,8 +27,9 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/">blog</a>
             <a href="{{ site.baseurl }}/about">about</a>
+            <a href="https://imogenerative.github.io">art</a>
+            <a href="{{ site.baseurl }}/">blog</a>
           </nav>
         </header>
       </div>
