--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,6 +30,7 @@
             <a href="{{ site.baseurl }}/about">about</a>
             <a href="https://imogenerative.github.io">art</a>
             <a href="{{ site.baseurl }}/">blog</a>
+            <a href="https://github.com/imogenerative">code</a>
           </nav>
         </header>
       </div>
