--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,9 +27,9 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/about">about</a>
+            <a href="{{ site.baseurl }}/">about</a>
             <a href="https://imogenerative.github.io">art</a>
-            <a href="{{ site.baseurl }}/">blog</a>
+            <a href="{{ site.baseurl }}/blog">blog</a>
             <a href="https://github.com/imogenerative">code</a>
           </nav>
         </header>
