--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
 
           <nav>
             <a href="{{ site.baseurl }}/">about</a>
-            <a href="https://imogenerative.github.io">art</a>
+            <strong><a href="https://imogenerative.github.io">art</a></strong>
             <a href="{{ site.baseurl }}/blog">blog</a>
             <a href="https://github.com/imogenerative">code</a>
           </nav>
