--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,9 +28,9 @@
 
           <nav>
             <a href="{{ site.baseurl }}/">about</a>
-            <u><a href="https://imogenerative.github.io">art</a></u>
+            <u><a href="https://chiropterascout.github.io">art</a></u>
             <a href="{{ site.baseurl }}/blog">blog</a>
-            <a href="https://github.com/imogenerative">code</a>
+            <a href="https://github.com/chiropterascout">code</a>
           </nav>
         </header>
       </div>
