--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
 
           <nav>
             <a href="{{ site.baseurl }}/">about</a>
-            <u><a href="https://chiropterascout.github.io">art</a></u>
+            <u><a href="https://calculush.gq">art</a></u>
             <a href="{{ site.baseurl }}/blog">blog</a>
             <a href="https://github.com/chiropterascout">code</a>
           </nav>
