--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,6 +31,8 @@
             <a href="https://chiropterascout.github.io">art</a>
             <a href="{{ site.baseurl }}/blog">blog</a>
             <a href="https://github.com/chiropterascout">code</a>
+            <a href="https://https://chiropterascout.github.io/poetry">poetry</a>
+            <a href="https://calculush.gq">twines</a>
           </nav>
         </header>
       </div>
