--- a/style.scss
+++ b/style.scss
@@ -211,7 +211,8 @@ img {
 }
 
 nav {
-  float: right;
+  //float: right;
+  margin: 0 auto;
   margin-top: 23px; // @TODO: Vertically middle align
   font-family: $helveticaNeue;
   font-size: 18px;
