--- a/style.scss
+++ b/style.scss
@@ -211,8 +211,7 @@ img {
 }
 
 nav {
-  //float: right;
-  margin: 0 auto;
+  float: right;
   margin-top: 23px; // @TODO: Vertically middle align
   font-family: $helveticaNeue;
   font-size: 18px;
