--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,12 +27,11 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/">about</a>
-            <a href="https://chiropterascout.github.io">art</a>
-            <a href="{{ site.baseurl }}/blog">blog</a>
-            <a href="https://github.com/chiropterascout">code</a>
-            <a href="https://https://chiropterascout.github.io/poetry">poetry</a>
-            <a href="https://calculush.gq">twines</a>
+            <a href="{{ site.baseurl }}/">🏘</a>
+            <a href="https://chiropterascout.github.io">🎨</a>
+            <a href="{{ site.baseurl }}/blog">📖</a>
+            <a href="https://github.com/chiropterascout">💻</a>
+            <a href="https://calculush.gq">	🎮</a>
           </nav>
         </header>
       </div>
