--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/">🏘</a>
+            <a href="{{ site.baseurl }}/">🏠</a>
             <a href="https://chiropterascout.github.io">🎨</a>
             <a href="{{ site.baseurl }}/blog">📖</a>
             <a href="https://github.com/chiropterascout">💻</a>
