--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,9 +28,9 @@
 
           <nav>
             <a href="{{ site.baseurl }}/">🏠</a>
-            <a href="https://chiropterascout.github.io">🎨</a>
+            <a href="https://scoutuinn.github.io">🎨</a>
             <a href="{{ site.baseurl }}/blog">📖</a>
-            <a href="https://github.com/chiropterascout">💻</a>
+            <a href="https://github.com/scoutquinn">💻</a>
             <a href="https://calculush.gq">🎮</a>
           </nav>
         </header>
