--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
             <a href="{{ site.baseurl }}/blog">📖</a>
             <a href="https://github.com/scoutquinn">💻</a>
             <a href="https://calculush.gq">🎮</a>
-            <a href="https://soundcloud.com/razor_lined>🎧</a>
+            <a href="https://soundcloud.com/razor_lined">🎧</a>
           </nav>
         </header>
       </div>
