--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
 
           <nav>
             <a href="{{ site.baseurl }}/">🏠</a>
-            <a href="https://scoutuinn.github.io">🎨</a>
+            <a href="https://scoutquinn.github.io">🎨</a>
             <a href="{{ site.baseurl }}/blog">📖</a>
             <a href="https://github.com/scoutquinn">💻</a>
             <a href="https://calculush.gq">🎮</a>
