--- a/style.scss
+++ b/style.scss
@@ -212,14 +212,13 @@ img {
 }
 
 nav {
-  float: none;
+  float: right;
   margin-top: 23px; // @TODO: Vertically middle align
   font-family: $helveticaNeue;
   font-size: 18px;
 
   @include mobile {
-    //float: none;
-    margin: 0 auto;
+    float: none;
     margin-top: 9px;
     display: block;
     font-size: 16px;
